# BreakthroughAutoencoder

./: .gitignore  Autoencoder_methods.py  Data_Methods.py  Decorators.py  Generate_Noisy_Slides.py  Injection_Flavours.py  LICENSE  README.md  Setigen_Cadence_Test.ipynb  Signal_Class.py  Signal_Injections.py  WelshFlag.npy  WelshFlagGeneration.py  WelshFlag_depreciated.npy  Welsh_Flag_Generation.py  conv_vae_mnist_debuggercafe.ipynb  cut_file.py  pyproject.toml  quick_workings_for_consolidation_method.ipynb  setigen_fiddling.ipynb
checkpoints/No_Background_20k_ConvDAE_lat8_ep3_20250824-075315/: config.json
checkpoints/With_B_20k_30E_ConvDAE_lat8_ep30_20250824-120503/: config.json
checkpoints/With_Background_20k_ConvDAE_lat8_ep6_20250824-082738/: config.json  model.txt
