[tool.poetry]
name = "breakthroughautoencoder"
version = "0.1.0"
description = ""
authors = ["kaimul19 <kaimulcock19@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numba = "^0.60.0"
blimpy = "^2.1.4"
setigen = "^2.7.0"
tqdm = "^4.67.1"
matplotlib = "^3.10.0"
torch = {version = "^2.7.1+cu126", source = "pytorch-cu126"}
torchvision = {version = "^0.22.1+cu126", source = "pytorch-cu126"}
torchaudio = {version = "^2.7.1+cu126", source = "pytorch-cu126"}
ipykernel = "^6.29.5"
ipywidgets = "^8.1.7"
imageio = "^2.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"
